@@ -22,13 +22,11 @@ my %WriteMakefileArgs = (
     "CPAN::Meta" => 0,
     "CPAN::Meta::Requirements" => 0,
     "Class::Load" => 0,
+    "Class::Tiny" => 0,
     "File::Basename" => 0,
     "Getopt::Lucid" => 0,
     "List::Util" => 0,
-    "Log::Dispatchouli" => 0,
-    "Object::Tiny" => 0,
     "Pod::Usage" => 0,
-    "autodie" => "2.00",
     "strict" => 0,
     "warnings" => 0
   },
@@ -53,6 +51,7 @@ my %FallbackPrereqs = (
   "CPAN::Meta::Requirements" => 0,
   "Capture::Tiny" => 0,
   "Class::Load" => 0,
+  "Class::Tiny" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Basename" => 0,
   "File::Spec" => 0,
@@ -60,12 +59,9 @@ my %FallbackPrereqs = (
   "File::pushd" => 0,
   "Getopt::Lucid" => 0,
   "List::Util" => 0,
-  "Log::Dispatchouli" => 0,
-  "Object::Tiny" => 0,
   "Pod::Usage" => 0,
   "Test::Deep" => 0,
   "Test::More" => "0.92",
-  "autodie" => "2.00",
   "strict" => 0,
   "warnings" => 0
 );
